--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 p-8">
     <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl p-6">
-        <h1 class="text-2xl font-bold mb-4">Blue or Yellow Image Model</h1>
+        <h1 class="text-2xl font-bold mb-4">Image Model</h1>
         <div class="space-x-2 mb-4">
             <button type="button" onclick="init()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Start
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
-        const URL = "./data_d/";
+        const URL = "./data_d/"
         
         let model, webcam, labelContainer, maxPredictions;
         let isRunning = false;
