--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
-        const URL = "./data_d/"
+        const URL = "./"
         
         let model, webcam, labelContainer, maxPredictions;
         let isRunning = false;
